--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,3 @@
-<%= javascript_include_tag "users.js" %>
-
 <table id="users-datatable" data-source="<%= users_path(format: :json) %>">
   <thead>
     <tr>
@@ -9,9 +7,13 @@
       <th>Email</th>
       <th>Status</th>
       <th>Roles</th>
+      <th colspan = "3">Actions</th>
     </tr>
   </thead>
   <tbody>
   </tbody>
 </table>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js" integrity="sha512-+k1pnlgt4F1H8L7t3z95o3/KO+o78INEcXTbnoJQ/F2VqDVhWoaiVml/OEHv9HsVgxUaVW+IbiZPUJQfF/YxZw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>
+
+<%= javascript_include_tag "users_datatable.js" %>
